--- a/src/components/App.module.scss
+++ b/src/components/App.module.scss
@@ -1,6 +1,8 @@
-.image {
-  img {
-    border-radius: 20px;
-    box-shadow: 5px 5px 10px 0px #1976d2;
-  }
+@import "src/data/variables";
+
+.container {
+  background-color: $mainColor;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
