--- a/src/components/Introduction/Introduction.module.scss
+++ b/src/components/Introduction/Introduction.module.scss
@@ -1,31 +1,101 @@
 @import "src/data/variables";
 
-.container{
+.container {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
   max-width: 85%;
   min-height: 100vh;
-  padding-top: 20px;
+  padding: 20px 0;
   @media (max-width: 880px) {
     flex-direction: column;
     justify-content: flex-start;
+    max-width: 95%;
+    padding-top: 10px;
   }
+
   .image {
     img {
       border-radius: 10%;
       box-shadow: -5px 5px 10px 0px $secondaryColor;
+      @media (max-width: 880px) {
+        width: 250px;
+        box-shadow: -5px -5px 10px 0px $secondaryColor;
+      }
     }
   }
-  .introduction{
+
+  .introduction {
     margin-left: 20px;
-    min-width: 450px;
-    border-radius: 5%;
+    min-width: 250px;
+    border-radius: 2%;
     box-shadow: 5px -5px 10px 0px $secondaryColor;
     padding: 10px;
     @media (max-width: 880px) {
       margin-left: 0px;
       margin-top: 20px;
+      box-shadow: 5px 5px 10px 0px $secondaryColor;
+    }
+
+    .header {
+      margin: 20px 10px;
+      font-weight: bold;
+      text-align: center;
+      @media (max-width: 450px) {
+        font-size: 30px;
+      }
+    }
+
+    .valueContainer {
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      margin-bottom: 25px;
+
+      &::after {
+        position: absolute;
+        content: '';
+        bottom: -10px;
+        left: 50%;
+        width: 150px;
+        height: 2px;
+        background-color: $secondaryColor;
+        transform: translate(-50%, 50%);
+      }
+
+      @media (max-width: 450px) {
+        flex-direction: column;
+      }
+
+      .images {
+        position: relative;
+        width: 100px;
+        height: 100px;
+
+        &::after {
+          position: absolute;
+          content: '';
+          width: 90px;
+          height: 90px;
+          bottom: 50%;
+          left: 50%;
+          border: 1px solid rgba(255, 255, 255, 0.8);
+          border-radius: 50%;
+          transform: translate(-50%, 50%);
+        }
+
+        img {
+          width: 100px;
+          border-radius: 50%;
+        }
+      }
+
+      .value {
+        width: 100%;
+        text-align: center;
+      }
+
     }
   }
 }
