--- a/src/components/Introduction/Introduction.module.scss
+++ b/src/components/Introduction/Introduction.module.scss
@@ -93,7 +93,11 @@
 
       .value {
         width: 100%;
-        text-align: center;
+        margin-left: 20px;
+        @media (max-width: 450px) {
+          margin-left: 0px;
+          text-align: center;
+        }
       }
 
     }
