Added personal information, social media icons, changed the structure of the main page.

--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -1,2 +1,6 @@
+// Fonts took from this site https://web-vdv.ru/
+
 $mainColor: #fdf5e6;
 $secondaryColor: #053543;
+$headerFont: 'Oswald', sans-serif;
+$textFont: 'Montserrat', sans-serif;
