--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,8 +1,8 @@
 .box {
-  margin-bottom: 40px;
+ /* margin-bottom: 40px;
   @media (max-width: 600px) {
     margin-bottom: 35px;
-  }
+  }*/
   .toolbar {
     min-height: 40px;
     height: 40px;
