--- a/src/components/Introduction/Introduction.module.scss
+++ b/src/components/Introduction/Introduction.module.scss
@@ -1,51 +1,184 @@
 @import "src/data/variables";
 
-.container {
+.main {
   display: flex;
-  justify-content: space-evenly;
+  flex-direction: column;
   align-items: center;
-  max-width: 85%;
-  min-height: 100vh;
-  padding: 20px 0;
-  @media (max-width: 880px) {
-    flex-direction: column;
-    justify-content: flex-start;
-    max-width: 95%;
-    padding-top: 10px;
-  }
+  width: 90%;
+  //border: 1px solid brown;
 
-  .image {
-    img {
-      border-radius: 10%;
-      box-shadow: -5px 5px 10px 0px $secondaryColor;
+  .container {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+    min-height: 100vh;
+    padding: 20px 0;
+    //border: 1px solid black;
+    @media (max-width: 880px) {
+      flex-direction: column;
+      justify-content: flex-start;
+      padding-top: 10px;
+    }
+
+    .image {
+      min-height: 60vh;
+      //border: 3px solid yellow;
+      display: flex;
+      align-items: center;
+      margin-right: 20px;
       @media (max-width: 880px) {
-        width: 250px;
-        box-shadow: -5px -5px 10px 0px $secondaryColor;
+        margin-right: 0px;
+      }
+      @media (max-width: 680px) {
+        min-height: 50vh;
+      }
+      img {
+        border-radius: 10%;
+        box-shadow: -5px 5px 10px 0px $secondaryColor;
+        @media (max-width: 880px) {
+          width: 250px;
+          box-shadow: -5px -5px 10px 0px $secondaryColor;
+        }
+      }
+    }
+
+    .greetings {
+      padding: 20px 10px;
+      box-shadow: 5px -5px 10px 0px $secondaryColor;
+      border-radius: 1%;
+      //border: 1px solid red;
+      @media (max-width: 880px) {
+        min-width: 250px;
+        box-shadow: 5px 5px 10px 0px $secondaryColor;
+      }
+
+      .header {
+        margin-bottom: 20px;
+        text-align: center;
+        font-family: $headerFont;
+        font-weight: 400;
+        font-size: 30px;
+        letter-spacing: 2px;
+        color: $secondaryColor;
+        //border: 1px solid black;
+        @media (max-width: 680px) {
+          font-size: 25px;
+        }
+      }
+      .mainSign{
+        font-family: $textFont;
+        font-weight: 400;
+        font-size: 16px;
+        color: $secondaryColor;
+        text-align: center;
+        margin-bottom: 5px;
+        //border: 1px solid black;
+      }
+      .directionToMenu{
+        font-family: $textFont;
+        font-weight: 600;
+        font-size: 14px;
+        color: $secondaryColor;
+        text-align: right;
+        margin-top: 15px;
+        //border: 1px solid black;
       }
     }
   }
 
   .introduction {
-    margin-left: 20px;
+    position: relative;
     min-width: 250px;
-    border-radius: 2%;
-    box-shadow: 5px -5px 10px 0px $secondaryColor;
-    padding: 10px;
+    border-radius: 1%;
+    box-shadow: 5px 5px 10px 0px $secondaryColor;
+    padding: 20px;
+    margin-bottom: 15px;
     @media (max-width: 880px) {
-      margin-left: 0px;
-      margin-top: 20px;
-      box-shadow: 5px 5px 10px 0px $secondaryColor;
+      padding: 15px;
     }
-
-    .header {
-      margin: 20px 10px;
-      font-weight: bold;
+    .aboutMe{
+      margin-bottom: 40px;
       text-align: center;
-      @media (max-width: 450px) {
-        font-size: 30px;
+      font-family: $headerFont;
+      font-weight: 400;
+      font-size: 25px;
+      letter-spacing: 2px;
+      color: $secondaryColor;
+      //border: 1px solid red;
+    }
+    .imageIntroduction {
+      position: absolute;
+      right: -10%;
+      top: -20%;
+      height: 270px;
+      //border: 1px solid red;
+      @media (max-width: 880px) {
+        right: 0;
+        top: -11%;
+        height: 200px;
+      }
+      @media (max-width: 740px) {
+        right: 0;
+        top: -11%;
+        height: 150px;
+      }
+      @media (max-width: 570px) {
+        display: none;
+      }
+      &::before {
+        position: absolute;
+        content: '';
+        width: 250px;
+        height: 250px;
+        bottom: 50%;
+        left: 50%;
+        border: 5px solid rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
+        transform: translate(-50%, 50%);
+        @media (max-width: 880px) {
+          width: 185px;
+          height: 185px;
+        }
+        @media (max-width: 740px) {
+          width: 135px;
+          height: 135px;
+        }
+      }
+      &::after {
+        position: absolute;
+        content: '';
+        width: 240px;
+        height: 240px;
+        bottom: 50%;
+        left: 50%;
+        border: 1px solid rgba(255, 255, 255, 0.8);
+        border-radius: 50%;
+        transform: translate(-50%, 50%);
+        @media (max-width: 880px) {
+          width: 175px;
+          height: 175px;
+        }
+        @media (max-width: 740px) {
+          width: 125px;
+          height: 125px;
+        }
+      }
+      img {
+        width: 270px;
+        height: 270px;
+        border-radius: 50%;
+        //border: 1px solid black;
+        @media (max-width: 880px) {
+          width: 200px;
+          height: 200px;
+        }
+        @media (max-width: 740px) {
+          width: 150px;
+          height: 150px;
+        }
       }
     }
-
     .valueContainer {
       position: relative;
       display: flex;
@@ -94,6 +227,10 @@
       .value {
         width: 100%;
         margin-left: 20px;
+        font-family: $textFont;
+        font-weight: 400;
+        font-size: 16px;
+        color: $secondaryColor;
         @media (max-width: 450px) {
           margin-left: 0px;
           text-align: center;
