--- a/src/data/variables.scss
+++ b/src/data/variables.scss
@@ -4,3 +4,9 @@ $mainColor: #fdf5e6;
 $secondaryColor: #053543;
 $headerFont: 'Oswald', sans-serif;
 $textFont: 'Montserrat', sans-serif;
+
+$imageGallerySize: 480px;
+$firstStep: 80px;
+$secondStep: 130px;
+$thirdStep: 50px;
+$forthStep: 180px
