--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,14 +1,12 @@
+@import "src/data/variables";
+
 .box {
- /* margin-bottom: 40px;
-  @media (max-width: 600px) {
-    margin-bottom: 35px;
-  }*/
   .toolbar {
-    min-height: 40px;
-    height: 40px;
+    min-height: $appHeaderWidthFirst;
+    height: $appHeaderWidthFirst;
     @media (max-width: 600px) {
-      min-height: 35px;
-      height: 35px;
+      min-height: $appHeaderWidthSecond;
+      height: $appHeaderWidthSecond;
     }
   }
 }
