Under development page has been modified. Added under development icon in menu + changed transition type.

--- a/src/components/MatetialUI/MenuList/MenuList.module.scss
+++ b/src/components/MatetialUI/MenuList/MenuList.module.scss
@@ -1,8 +1,16 @@
 @import "src/data/variables";
+@import "src/data/mixins";
 
 .links{
   a {
+    display: flex;
     text-decoration: none;
     color: $secondaryColor;
+    .menuItem{
+      width: 100%;
+      .icon{
+        margin-left: 10px;
+      }
+    }
   }
 }
