--- a/src/components/Main/Introduction/Introduction.module.scss
+++ b/src/components/Main/Introduction/Introduction.module.scss
@@ -51,6 +51,10 @@
         @include fontRestInfo;
         text-align: right;
         margin-top: 15px;
+        a{
+          text-decoration: none;
+          color: $secondaryColor;
+        }
       }
     }
   }
