--- a/src/components/common/UnderDevelopment/UnderDevelopment.module.scss
+++ b/src/components/common/UnderDevelopment/UnderDevelopment.module.scss
@@ -14,6 +14,7 @@
     .valueContainer{
       .description{
         @include fontDescription;
+        text-align: center;
         a {
           text-decoration: none;
           color: $secondaryColor;
