Procedure arrangement was added in header. Creating a page with the products.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,12 +1,19 @@
 @import "src/data/variables";
+@import "src/data/mixins";
 
 .box {
   .toolbar {
     min-height: $appHeaderWidthFirst;
     height: $appHeaderWidthFirst;
+    display: flex;
+    justify-content: space-between;
     @media (max-width: 600px) {
       min-height: $appHeaderWidthSecond;
       height: $appHeaderWidthSecond;
+    }
+    a {
+      text-decoration: none;
+      color: white;
     }
   }
 }
