--- a/src/data/mixins.scss
+++ b/src/data/mixins.scss
@@ -18,7 +18,7 @@
 @mixin innerContainerWithoutShadow{
   min-width: 250px;
   padding: 20px;
-  margin: 15px 0px;
+  margin: 15px 0;
   @media (max-width: 880px) {
     padding: 15px;
   }
@@ -28,7 +28,7 @@
   @include shadowBlock;
 }
 @mixin shadowBlock {
-  box-shadow: 5px 5px 10px 0px $secondaryColor;
+  box-shadow: 5px 5px 10px 0 $secondaryColor;
   border-radius: 1%;
 }
 
