--- a/src/components/GoodsForSale/Item/Item.module.scss
+++ b/src/components/GoodsForSale/Item/Item.module.scss
@@ -3,95 +3,127 @@
 
 .container {
   @include innerContainerWithShadow;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
   width: 400px;
+  min-height: 500px;
   .title {
     @include fontDescription;
-    font-weight: 500;
+    font-weight: 700;
     margin-bottom: 15px;
     text-align: center;
   }
-  .imageContainer {
+  .underTitleBlock{
+    height: 100%;
     display: flex;
-    align-items: center;
-    width: 100%;
-    .image{
-      @media (max-width: 350px) {
-        display: none;
-      }
-      img{
-        max-height: 400px;
-        width: 100px;
-        @media (max-width: 400px) {
-          width: 70px;
-        }
-      }
-    }
-    .descriptionContainer{
+    flex-direction: column;
+    justify-content: flex-start;
+    .descriptionChart{
+      margin-bottom: 10px;
+      height: 75px;
       display: flex;
-      justify-content: flex-start;
       flex-direction: column;
-      .descriptionChart{
-        margin-bottom: 10px;
-
-        .headerChart{
-          @include fontRestInfo;
-          @include flexCenter;
-          margin-bottom: 5px;
-          div {
-            width: 40%;
-            text-align: center;
-            @media (max-width: 400px) {
-              font-size: 14px;
-              width: 50%;
-            }
+      justify-content: center;
+      @include shadowInsideBlock;
+      .headerChart{
+        @include fontRestInfo;
+        @include flexCenter;
+        margin-bottom: 5px;
+        div {
+          width: 30%;
+          text-align: center;
+          @media (max-width: 400px) {
+            font-size: 14px;
+            width: 35%;
           }
         }
+      }
+      .valueCharts{
         .valueChart{
           @include fontDescription;
           @include flexCenter;
           div{
-            width: 40%;
+            width: 30%;
             text-align: center;
             @media (max-width: 400px) {
               font-size: 14px;
-              width: 50%;
+              width: 35%;
             }
           }
         }
       }
-      .actionDescription {
-        @include fontDescription;
-        box-shadow: 0 0 5px 0 $secondaryColor;
-        border-radius: 1%;
-        font-size: 14px;
-        padding: 10px 3px;
-        margin-left: 10px;
-        text-align: center;
-        @media (max-width: 450px) {
-          font-size: 12px;
+    }
+    .imageContainer {
+      display: flex;
+      align-items: flex-end;
+      width: 100%;
+      min-height: 70%;
+      .image{
+        @include flexCenter;
+        height: 250px;
+        width: 100px;
+        @media (max-width: 350px) {
+          display: none;
+          height: 0;
+          width: 0;
         }
-        div {
-          position: relative;
-          margin-bottom: 15px;
-          &::after {
-            position: absolute;
-            content: '';
-            bottom: -8px;
-            left: 50%;
-            width: 80px;
-            height: 1px;
-            background-color: $secondaryColor;
-            transform: translate(-50%, 50%);
+        img{
+          height: 250px;
+          max-width: 100px;
+          @media (max-width: 400px) {
+            height: 250px * 0.7;
+            max-width: 100px * 0.7;
           }
         }
       }
-    }
+      .descriptionContainer{
+        display: flex;
+        justify-content: flex-start;
+        flex-direction: column;
+        height: 100%;
+        .actionDescription {
+          @include fontDescription;
+          @include shadowInsideBlock;
+          display: flex;
+          flex-direction: column;
+          justify-content: space-evenly;
+          text-align: center;
+          min-height: 300px;
+          font-size: 14px;
+          padding: 10px 3px;
+          margin-left: 10px;
+          @media (max-width: 450px) {
+            font-size: 12px;
+          }
+          @media (max-width: 350px) {
+            margin-left: 0;
+          }
+          div {
+            position: relative;
+            margin-bottom: 15px;
+            &::after {
+              position: absolute;
+              content: '';
+              bottom: -8px;
+              left: 50%;
+              width: 80px;
+              height: 1px;
+              background-color: $secondaryColor;
+              transform: translate(-50%, 50%);
+            }
+          }
+        }
+      }
 
+    }
   }
   .buttonsContainer{
     text-align: center;
     margin-top: 10px;
     .buttonGroup{
+      @include shadowInsideBlock;
+      border-radius: 3px;
       .button{
         padding: 5px;
         text-transform: capitalize;
@@ -103,8 +135,12 @@
           font-size: 10px;
           font-weight: 700;
         }
+        @media (max-width: 320px) {
+          padding: 1px;
+          font-size: 10px;
+          font-weight: 700;
+        }
       }
     }
   }
-
 }
