--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -14,6 +14,11 @@
     a {
       text-decoration: none;
       color: white;
+      button{
+        @media (max-width: 350px) {
+          font-size: 11px;
+        }
+      }
     }
   }
 }
