--- a/src/data/mixins.scss
+++ b/src/data/mixins.scss
@@ -31,6 +31,10 @@
   box-shadow: 5px 5px 10px 0 $secondaryColor;
   border-radius: 1%;
 }
+@mixin shadowInsideBlock {
+  box-shadow: 0 0 4px 0 $secondaryColor;
+  border-radius: 1%;
+}
 
 // Fonts
 @mixin fontTitle {
