--- a/src/data/mixins.scss
+++ b/src/data/mixins.scss
@@ -8,9 +8,9 @@
   flex-direction: column;
 }
 @mixin componentContainer{
+  @include flexCenter;
   width: 90%;
   min-height: 95vh;
-  @include flexCenter;
   @media (max-width: 880px) {
     width: 95%;
   }
@@ -45,6 +45,11 @@
   font-size: 25px;
   letter-spacing: 2px;
   color: $secondaryColor;
+}
+@mixin fontTitleForInnerBlock{
+  @include fontTitle;
+  font-size: 20px;
+  margin-bottom: 20px;
 }
 @mixin fontDescription {
   font-family: $textFont;
