--- a/src/components/Training/Benefits/Benefits.module.scss
+++ b/src/components/Training/Benefits/Benefits.module.scss
@@ -2,48 +2,58 @@
 @import "src/data/variables";
 
 .container {
-  @include innerContainerWithShadow;
-  @include flexCenter;
-  flex-direction: column;
+  @include componentContainer;
+  .innerContainer {
+    @include innerContainerWithShadow;
+    @include flexCenter;
+    flex-direction: column;
 
-  .title {
-    @include fontTitle;
-  }
-
-  .valueContainer {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 25px;
-
-    @media (max-width: 450px) {
-      flex-direction: column;
+    .title {
+      @include fontTitle;
+      @media (max-width: 450px) {
+        font-size: 18px;
+      }
     }
-    .images {
-      width: 100px;
 
-      img {
+    .valueContainer {
+      display: flex;
+      align-items: center;
+      margin-bottom: 25px;
+      width: 100%;
+
+      @media (max-width: 450px) {
+        flex-direction: column;
+      }
+      .images {
         width: 100px;
-      }
-    }
 
-    .bullet {
-      margin-left: 15px;
-      .bulletTitle{
-        @include fontDescription;
-        font-weight: 600;
-      }
-      .bulletDescription {
-        width: 100%;
-        margin-left: 20px;
-        @include fontDescription;
-        @media (max-width: 450px) {
-          margin-left: 0;
-          text-align: center;
+        img {
+          width: 100px;
         }
       }
-    }
 
+      .bullet {
+        margin-left: 20px;
+        .bulletTitle{
+          @include fontDescription;
+          font-weight: 600;
+          margin-bottom: 5px;
+        }
+        .bulletDescription {
+          width: 100%;
+          padding-left: 15px;
+          @include fontDescription;
+          @media (max-width: 450px) {
+            text-align: center;
+            font-size: 14px;
+            font-weight: 500;
+          }
+        }
+        @media (max-width: 450px) {
+          margin-left: 0;
+        }
+      }
+
+    }
   }
 }
