--- a/src/components/Training/TrainingIntroduction/TrainingIntroduction.module.scss
+++ b/src/components/Training/TrainingIntroduction/TrainingIntroduction.module.scss
@@ -15,12 +15,18 @@
     .innerBlock {
       .courseTitle {
         @include fontTitleForInnerBlock;
+        @media (max-width: 450px) {
+          font-size: 18px;
+        }
       }
 
       .courseDescription {
         @include fontDescription;
         font-weight: 500;
         text-align: center;
+        @media (max-width: 450px) {
+          font-size: 14px;
+        }
       }
     }
   }
