--- a/src/components/Training/VariantsTable/VariantsTable.module.scss
+++ b/src/components/Training/VariantsTable/VariantsTable.module.scss
@@ -4,24 +4,41 @@
 .container {
   @include componentContainer;
   .variants {
-    @include innerContainerWithoutShadow;
+    @include innerContainerWithShadow;
     @include flexCenter;
     flex-direction: column;
 
     .variantsTitle {
       @include fontTitle;
+      @media (max-width: 450px) {
+        font-size: 18px;
+      }
     }
 
     .variantsDescription {
       @include flexCenter;
+      @media (max-width: 970px) {
+        flex-direction: column;
+        justify-content: center;
+      }
       .restInfoBlock {
         margin-left: 30px;
+        @media (max-width: 970px) {
+          margin-left: 0;
+          margin-top: 10px;
+        }
+        @media (max-width: 450px) {
+          width: 250px;
+        }
         .restInfo{
           display: flex;
           .value {
             @include fontRestInfo;
             padding: 5px 0;
             margin-left: 5px;
+            @media (max-width: 450px) {
+              font-size: 12px;
+            }
           }
         }
 
