--- a/src/components/common/UnderDevelopment/UnderDevelopment.module.scss
+++ b/src/components/common/UnderDevelopment/UnderDevelopment.module.scss
@@ -3,6 +3,10 @@
 
 .container {
   @include componentContainer;
+  @media (min-height: 800px) {
+    min-height: 95vh;
+    margin-top: 0;
+  }
 
   .innerContainer {
     @include innerContainerWithShadow;
