--- a/src/data/mixins.scss
+++ b/src/data/mixins.scss
@@ -14,6 +14,10 @@
   @media (max-width: 880px) {
     width: 95%;
   }
+  @media (min-height: 800px) {
+    min-height: auto;
+    margin-top: 100px;
+  }
 }
 @mixin innerContainerWithoutShadow{
   min-width: 250px;
