Modal for auto scrolling to up has been made

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -2,6 +2,7 @@
 @import "src/data/mixins";
 
 .appContainer {
+  position: relative;
   @include appContainer;
   margin-top: $appHeaderWidthFirst;
   @media (max-width: 600px) {
