--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -2,23 +2,31 @@
 @import "src/data/mixins";
 
 .box {
-  .toolbar {
-    min-height: $appHeaderWidthFirst;
-    height: $appHeaderWidthFirst;
+  .appBar {
     display: flex;
-    justify-content: space-between;
-    @media (max-width: 600px) {
-      min-height: $appHeaderWidthSecond;
-      height: $appHeaderWidthSecond;
-    }
-    a {
-      text-decoration: none;
-      color: white;
-      button{
-        @media (max-width: 350px) {
-          font-size: 11px;
+    align-items: center;
+    .toolbar {
+      max-width: 1000px;
+      width: 90%;
+      min-height: $appHeaderWidthFirst;
+      height: $appHeaderWidthFirst;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      @media (max-width: 600px) {
+        min-height: $appHeaderWidthSecond;
+        height: $appHeaderWidthSecond;
+      }
+      a {
+        text-decoration: none;
+        color: white;
+        button{
+          @media (max-width: 350px) {
+            font-size: 11px;
+          }
         }
       }
     }
   }
+
 }
