ScrollDown component has been made. Some refactoring was made as well.

--- a/src/components/Training/Benefits/Benefits.module.scss
+++ b/src/components/Training/Benefits/Benefits.module.scss
@@ -3,6 +3,11 @@
 
 .container {
   @include componentContainer;
+  margin-top: $appHeaderWidthFirst + 25px;
+
+  @media (max-width: 600px) {
+    margin-top: $appHeaderWidthSecond + 25px;
+  }
   .innerContainer {
     @include innerContainerWithShadow;
     @include flexCenter;
