Discount counter has been created.

--- a/src/components/App/App.module.scss
+++ b/src/components/App/App.module.scss
@@ -5,6 +5,7 @@
   position: relative;
   @include appContainer;
   margin-top: $appHeaderWidthFirst;
+  min-height: 100vh;
   @media (max-width: 600px) {
     margin-top: $appHeaderWidthSecond;
   }
