--- a/src/components/Online/IntroOnline/IntroOnline.module.scss
+++ b/src/components/Online/IntroOnline/IntroOnline.module.scss
@@ -11,7 +11,28 @@
 
     .title {
       @include fontTitle;
+      font-size: 32px;
       font-weight: bolder;
+    }
+    .onlineHeader {
+      @include fontRestInfo;
+      font-size: 20px;
+      font-style: italic;
+      font-weight: normal;
+      margin-bottom: 20px;
+    }
+
+    .bulletBlock {
+      @include flexCenter;
+      flex-direction: column;
+      margin-top: 25px;
+
+      .bullet {
+        @include fontTitleForInnerBlock;
+      }
+      .bulletInfo {
+        @include fontDescription;
+      }
     }
   }
 }
