--- a/src/components/Online/Additions/Additions.module.scss
+++ b/src/components/Online/Additions/Additions.module.scss
@@ -13,6 +13,12 @@
   .innerContainer {
     @include innerContainerWithShadow;
     width: 70%;
+    @media (max-width: 800px) {
+      width: 80%;
+    }
+    @media (max-width: 700px) {
+      width: 95%;
+    }
 
     .innerBlock {
       .additionTitle {
