--- a/src/components/Online/Program/Program.module.scss
+++ b/src/components/Online/Program/Program.module.scss
@@ -12,7 +12,12 @@
   .innerContainer {
     @include innerContainerWithShadow;
     width: 70%;
-
+    @media (max-width: 800px) {
+      width: 80%;
+    }
+    @media (max-width: 700px) {
+      width: 95%;
+    }
     .innerBlock {
       .practiceTitle {
         @include fontTitleForInnerBlock;
