--- a/src/data/mixins.scss
+++ b/src/data/mixins.scss
@@ -10,6 +10,7 @@
 @mixin componentContainer{
   @include flexCenter;
   width: 90%;
+  max-width: 1000px;
   min-height: 95vh;
   @media (max-width: 880px) {
     width: 95%;
@@ -119,5 +120,39 @@
   @media (max-width: 470px) {
     width: $imageGallerySize - $thirdStep - $size;
     height: $imageGallerySize - $thirdStep - $size;
+  }
+}
+
+// YouTube steps
+@mixin youTubeSteps {
+  height: 390px;
+  width: 640px;
+  @media (max-width: 660px) {
+    width: 550px;
+    height: 550px*0.609375;
+  }
+  @media (max-width: 600px) {
+    width: 500px;
+    height: 500px*0.609375;
+  }
+  @media (max-width: 550px) {
+    width: 450px;
+    height: 450px*0.609375;
+  }
+  @media (max-width: 500px) {
+    width: 400px;
+    height: 400px*0.609375;
+  }
+  @media (max-width: 450px) {
+    width: 380px;
+    height: 380px*0.609375;
+  }
+  @media (max-width: 400px) {
+    width: 330px;
+    height: 330px*0.609375;
+  }
+  @media (max-width: 350px) {
+    width: 300px;
+    height: 300px*0.609375;
   }
 }
