--- a/src/components/Online/Additions/Additions.module.scss
+++ b/src/components/Online/Additions/Additions.module.scss
@@ -33,6 +33,7 @@
       .bulletsBlock {
         .bullet {
           @include fontDescription;
+          position: relative;
           font-weight: 500;
           text-align: center;
           font-style: italic;
