--- a/src/components/Online/Program/Program.module.scss
+++ b/src/components/Online/Program/Program.module.scss
@@ -30,6 +30,7 @@
 
       .lessonsBlock {
           .lessons {
+            position: relative;
             @include fontDescription;
             font-weight: 500;
             text-align: center;
