--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -21,10 +21,43 @@
 
   .price {
     @include fontRestInfo;
-    font-size: 26px;
-    //font-style: italic;
+    position: relative;
+
+    //Only for sale
+    font-size: 22px;
+    //font-size: 26px;
     font-weight: 500;
     margin-bottom: 20px;
+
+    //Only for sale
+    &::after {
+      position: absolute;
+      content: '';
+      left: -10px; right: -10px;
+      top: 45%;
+      opacity: 40%;
+      background: red;
+      height: 2px;
+      transform: rotate(-4deg);
+    }
+  }
+  //Only for sale
+  .sale {
+    @include fontRestInfo;
+    position: relative;
+    font-size: 26px;
+    color: red;
+    font-weight: 700;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    &::after {
+      position: absolute;
+      top: -20px; right: -15px;
+      font-size: 14px;
+      font-weight: 800;
+      content: '- 40%';
+      color: red;
+    }
   }
 
   .bulletBlock {
