--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -24,13 +24,13 @@
     position: relative;
 
     //Only for sale
-    //font-size: 22px;
-    font-size: 26px;
+    font-size: 22px;
+    //font-size: 26px;
     font-weight: 500;
     margin-bottom: 20px;
 
     //Only for sale
-    /*&::after {
+    &::after {
       position: absolute;
       content: '';
       left: -10px; right: -10px;
@@ -39,10 +39,10 @@
       background: red;
       height: 2px;
       transform: rotate(-4deg);
-    }*/
+    }
   }
   //Only for sale
-  /*.sale {
+  .sale {
     @include fontRestInfo;
     position: relative;
     font-size: 26px;
@@ -50,15 +50,15 @@
     font-weight: 700;
     margin-top: 10px;
     margin-bottom: 20px;
-    &::after {
+    .saleDiscount {
       position: absolute;
       top: -20px; right: -15px;
       font-size: 14px;
       font-weight: 800;
-      content: '- 40%';
+      content: '';
       color: red;
     }
-  }*/
+  }
 
   .bulletBlock {
     margin-bottom: 20px;
