Menu has been hidden. Online courses and sliders are only available.

--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -12,7 +12,7 @@
       height: $appHeaderWidthFirst;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      justify-content: space-around;
       @media (max-width: 600px) {
         min-height: $appHeaderWidthSecond;
         height: $appHeaderWidthSecond;
@@ -26,6 +26,10 @@
           }
         }
       }
+      :hover {
+        color: #dedede;
+    }
+
     }
   }
 
