--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -56,7 +56,7 @@
       font-size: 14px;
       font-weight: 800;
       content: '';
-      color: red;
+      color: darkred;
     }
   }
 
@@ -68,6 +68,10 @@
       text-align: center;
       margin: 20px 0;
     }
+    /*:first-child {
+      color: darkred;
+      font-weight: 700;
+    }*/
   }
 
   .additions {
