Offer for the courses has been changed.

--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -24,13 +24,15 @@
     position: relative;
 
     //Only for sale
-    font-size: 22px;
-    //font-size: 26px;
-    font-weight: 500;
+    //font-size: 22px;
+    //font-weight: 500;
+    font-size: 26px;
+    font-weight: 700;
     margin-bottom: 20px;
+    color: #b01a05;
 
     //Only for sale
-    &::after {
+    /*&::after {
       position: absolute;
       content: '';
       left: -10px; right: -10px;
@@ -39,7 +41,7 @@
       background: red;
       height: 2px;
       transform: rotate(-4deg);
-    }
+    }*/
   }
   //Only for sale
   .sale {
