--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -54,7 +54,7 @@
     font-size: 26px;
     color: red;
     font-weight: 700;
-    margin-top: 10px;
+    margin-top: 30px;
     margin-bottom: 20px;
     .saleDiscount {
       position: absolute;
@@ -74,10 +74,10 @@
       text-align: center;
       margin: 20px 0;
     }
-    /*:first-child {
+    :first-child {
       color: darkred;
       font-weight: 700;
-    }*/
+    }
   }
 
   .additions {
