--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -54,7 +54,7 @@
     font-size: 26px;
     color: red;
     font-weight: 700;
-    //margin-top: 30px;
+    margin-top: 30px;
     margin-bottom: 20px;
     .saleDiscount {
       position: absolute;
