--- a/src/components/Online/IntroOnline/IntroOnline.module.scss
+++ b/src/components/Online/IntroOnline/IntroOnline.module.scss
@@ -17,6 +17,9 @@
       @include fontTitle;
       font-size: 40px;
       font-weight: bolder;
+      @media (max-width: 500px) {
+        font-size: 32px;
+      }
     }
     .onlineHeader {
       @include fontRestInfo;
@@ -24,6 +27,9 @@
       font-style: italic;
       font-weight: normal;
       margin-bottom: 20px;
+      @media (max-width: 500px) {
+        font-size: 20px;
+      }
     }
 
     .bulletBlock {
@@ -34,11 +40,17 @@
       .bullet {
         @include fontTitleForInnerBlock;
         font-size: 26px;
+        @media (max-width: 500px) {
+          font-size: 20px;
+        }
       }
       .bulletInfo {
         @include fontDescription;
         font-size: 18px;
         text-align: center;
+        @media (max-width: 500px) {
+          font-size: 16px;
+        }
       }
     }
   }
