--- a/src/components/Online/Buy/Offer/Offer.module.scss
+++ b/src/components/Online/Buy/Offer/Offer.module.scss
@@ -74,10 +74,10 @@
       text-align: center;
       margin: 20px 0;
     }
-    :first-child {
+    /*:first-child {
       color: darkred;
       font-weight: 700;
-    }
+    }*/
   }
 
   .additions {
