--- a/src/components/common/ModalUp/ModalUp.module.scss
+++ b/src/components/common/ModalUp/ModalUp.module.scss
@@ -3,7 +3,7 @@
 
 .container {
   position: fixed;
-  bottom: $appHeaderWidthFirst; left: 15px;
+  bottom: $appHeaderWidthFirst; right: 15px;
   border-radius: 50%;
   .icon {
     font-size: 45px;
